--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
 before_install:
     - export PATH=$HOME/.local/bin:$PATH
     - pip install autobahntestsuite --user `whoami`
+    - pip list autobahntestsuite --user `whoami`
 
 before_script:
     - composer install
