--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,6 @@
         "ratchet/rfc6455": "^0.2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "5"
+        "phpunit/phpunit": "^5.7.0"
     }
 }
