Update RxPHP to v2 in composer drop hhvm in travis

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "rx/websocket",
     "type": "library",
-    "description": "Async Websockets for PHP using Rx",
+    "description": "Websockets for PHP using Rx",
     "keywords": [
         "websocket",
         "websockets",
@@ -31,10 +31,10 @@
         "react/http": "^0.4.1",
         "react/http-client": "^0.4.10",
         "voryx/event-loop": "^2.0",
-        "reactivex/rxphp": "2.x-dev",
-        "ratchet/rfc6455": "^0.2.2"
+        "ratchet/rfc6455": "^0.2.2",
+        "reactivex/rxphp": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.0"
+        "phpunit/phpunit": "~5.7.0"
     }
 }
