--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,12 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Rx\\Websocket\\Test\\": "tests/"
-        }
+            "Rx\\Websocket\\Test\\": "test/",
+            "Rx\\": "vendor/reactivex/rxphp/test/Rx"
+        },
+        "files": [
+            "vendor/reactivex/rxphp/test/helper-functions.php"
+        ]
     },
     "require": {
         "react/http": "^0.7.3",
