--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,14 @@
         ]
     },
     "require": {
-        "react/http": "^0.7.3 | ^0.8",
-        "react/http-client": "^0.5.3",
+        "react/http": "^1",
         "voryx/event-loop": "^3.0 || ^2.0.2",
-        "ratchet/rfc6455": "^0.2.2",
-        "reactivex/rxphp": "^2.0.1"
+        "ratchet/rfc6455": "^0.3.0",
+        "reactivex/rxphp": "^2.0.1",
+        "ratchet/pawl": "^0.3.5",
+        "react/http-client": "^0.5.10"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7.0"
+        "phpunit/phpunit": "^9"
     }
 }
