--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "react/http": "^0.7.3 | ^0.8",
         "react/http-client": "^0.5.3",
         "voryx/event-loop": "^3.0 || ^2.0.2",
-        "ratchet/rfc6455": "^0.2.2",
+        "ratchet/rfc6455": "^0.2.2 || ^0.3",
         "reactivex/rxphp": "^2.0.1"
     },
     "require-dev": {
