--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         ]
     },
     "require": {
-        "react/http": "1.5.* | 1.6.* | 1.7.* | 1.8.*",
+        "react/http": "^1.9",
         "voryx/event-loop": "^3.0 || ^2.0.2",
         "ratchet/rfc6455": "^0.3",
         "reactivex/rxphp": "^2.0.1"
