--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,6 @@
         "react/event-loop": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9 | ^10"
     }
 }
